fixed Speaker title/company not visible

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ header button {
 .speaker-card div p {
     font-size: 14px;
     font-weight: 400;
-    color: white;
+    color: black;
     margin-top: 4px;
 }  
 
